Scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,9 @@ html {
 }
 
 ::-webkit-scrollbar {
-    /* width: 0px; */  /* remove scrollbar space */
-    /* background: transparent; */ /* optional: just make scrollbar invisible */
+    /*        width: 0px;  /* remove scrollbar space !1!*/
+    /*        background: transparent;  /* optional: just make scrollbar invisible !1!*/
+    display: none; 
 }
 
 * {
@@ -887,10 +888,6 @@ p.registered {
     }
     #footer-contact {
       position: relative;
-    }
-    ::-webkit-scrollbar {
-        width: 0px;  /* remove scrollbar space */
-        background: transparent;  /* optional: just make scrollbar invisible */
     }
 }
 
